# dbt-mcp

./: .env.core  .env.starter  .gitignore  README.md  pyproject.toml  test_setup.py
mcp/: agent.py  chat_history.db  cli.py  local_core_cli.py  local_starter_cli.py  remote_mcp_local_client_starter_cli.py  storage.py
mcp/archive/: app.py
transforms/: .user.yml  customers.csv  dbt_project.yml  products.csv  profiles.yml  stores.csv
transforms/models/outputs/: out_daily_summary.sql  out_daily_summary_by_store.sql  out_product_summary.sql  outputs.yml
transforms/models/sources/: raw.yml
transforms/models/staging/: staging.yml  stg_customers.sql  stg_products.sql  stg_stores.sql  stg_transactions.sql
transforms/profiles/: .user.yml  profiles.yml
transforms/seeds/: fake_datasets.py
